--- a/tsconfig.json
+++ b/tsconfig.json
@@ -43,12 +43,6 @@
       "@lib/filters/*": [
         "libs/filters/src/*"
       ],
-      "@lib/guards": [
-        "libs/guards/src"
-      ],
-      "@lib/guards/*": [
-        "libs/guards/src/*"
-      ],
       "@lib/common": [
         "libs/common/src"
       ],
@@ -102,6 +96,24 @@
       ],
       "@lib/service.registry/*": [
         "libs/service.registry/src/*"
+      ],
+      "@lib/metrics": [
+        "libs/metrics/src"
+      ],
+      "@lib/metrics/*": [
+        "libs/metrics/src/*"
+      ],
+      "@lib/dtos": [
+        "libs/dtos/src"
+      ],
+      "@lib/dtos/*": [
+        "libs/dtos/src/*"
+      ],
+      "@lib/guards": [
+        "libs/guards/src"
+      ],
+      "@lib/guards/*": [
+        "libs/guards/src/*"
       ]
     }
   }
