--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/apps/gateway/main",
-    "start:all": "cross-env NODE_ENV=development node ./scripts/start.mjs",
+    "start:all": "node ./scripts/start.mjs",
     "start:all:dev": "cross-env NODE_ENV=development node ./scripts/start.mjs",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
