--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "prisma:push": "cross-env NODE_ENV=development pnpm dotenv:dev prisma db push --schema=./libs/prisma/schema.prisma"
   },
   "dependencies": {
+    "@faker-js/faker": "8.1.0",
     "@liaoliaots/nestjs-redis": "9.0.5",
     "@liaoliaots/nestjs-redis-health": "9.0.4",
     "@nestjs/common": "10.2.6",
@@ -65,6 +66,7 @@
     "@nestjs/schematics": "10.0.2",
     "@nestjs/testing": "10.2.6",
     "@types/express": "4.17.18",
+    "@types/faker": "6.6.9",
     "@types/jest": "29.5.5",
     "@types/luxon": "3.3.2",
     "@types/node": "20.8.2",
@@ -82,6 +84,7 @@
     "prettier": "3.0.0",
     "prettier-plugin-organize-imports": "3.2.3",
     "prisma": "5.4.1",
+    "prisma-dbml-generator": "0.10.0",
     "source-map-support": "0.5.21",
     "supertest": "6.3.3",
     "ts-jest": "29.1.1",
