--- a/env/example.env
+++ b/env/example.env
@@ -3,7 +3,7 @@ INSTANCE_ID=972d4518-3684-4684-b1b3-e035ecaba9b9
 NODE_ENV=development
 API_CACHE_ENABLED=false
 
-MAIN_DATABASE_URI=mongodb://root:root@localhost:27018/alter?authSource=admin
+MAIN_DATABASE_URI=mongodb://root:root@localhost:27018/localdb?authSource=admin
 MAIN_DB_CLOAK_MASTER_KEY=k1.aesgcm256.J_tpl63GhYiIVx7m7PJ08LX_zCmHH9OnclBlIl9Cvr4=
 MAIN_DB_CLOAK_KEYCHAIN=v1.aesgcm256.d75ca42a.0Nqr0wloN_M6xuU2.poxXAkcU-9CvUL-jqgyvgnEK
 
