--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,102 +19,38 @@
     "forceConsistentCasingInFileNames": false,
     "noFallthroughCasesInSwitch": false,
     "paths": {
-      "@lib/prisma": [
-        "libs/prisma/src"
-      ],
-      "@lib/prisma/*": [
-        "libs/prisma/src/*"
-      ],
-      "@lib/decorators": [
-        "libs/decorators/src"
-      ],
-      "@lib/decorators/*": [
-        "libs/decorators/src/*"
-      ],
-      "@lib/interceptors": [
-        "libs/interceptors/src"
-      ],
-      "@lib/interceptors/*": [
-        "libs/interceptors/src/*"
-      ],
-      "@lib/filters": [
-        "libs/filters/src"
-      ],
-      "@lib/filters/*": [
-        "libs/filters/src/*"
-      ],
-      "@lib/common": [
-        "libs/common/src"
-      ],
-      "@lib/common/*": [
-        "libs/common/src/*"
-      ],
-      "@lib/logger": [
-        "libs/logger/src"
-      ],
-      "@lib/logger/*": [
-        "libs/logger/src/*"
-      ],
-      "@lib/config": [
-        "libs/config/src"
-      ],
-      "@lib/config/*": [
-        "libs/config/src/*"
-      ],
-      "@lib/scheduler": [
-        "libs/scheduler/src"
-      ],
-      "@lib/scheduler/*": [
-        "libs/scheduler/src/*"
-      ],
-      "@lib/middlewares": [
-        "libs/middlewares/src"
-      ],
-      "@lib/middlewares/*": [
-        "libs/middlewares/src/*"
-      ],
-      "@lib/health": [
-        "libs/health/src"
-      ],
-      "@lib/health/*": [
-        "libs/health/src/*"
-      ],
-      "@lib/audit.logger": [
-        "libs/audit.logger/src"
-      ],
-      "@lib/audit.logger/*": [
-        "libs/audit.logger/src/*"
-      ],
-      "@lib/errors": [
-        "libs/errors/src"
-      ],
-      "@lib/errors/*": [
-        "libs/errors/src/*"
-      ],
-      "@lib/service.registry": [
-        "libs/service.registry/src"
-      ],
-      "@lib/service.registry/*": [
-        "libs/service.registry/src/*"
-      ],
-      "@lib/metrics": [
-        "libs/metrics/src"
-      ],
-      "@lib/metrics/*": [
-        "libs/metrics/src/*"
-      ],
-      "@lib/dtos": [
-        "libs/dtos/src"
-      ],
-      "@lib/dtos/*": [
-        "libs/dtos/src/*"
-      ],
-      "@lib/guards": [
-        "libs/guards/src"
-      ],
-      "@lib/guards/*": [
-        "libs/guards/src/*"
-      ]
+      "@lib/prisma": ["libs/prisma/src"],
+      "@lib/prisma/*": ["libs/prisma/src/*"],
+      "@lib/decorators": ["libs/decorators/src"],
+      "@lib/decorators/*": ["libs/decorators/src/*"],
+      "@lib/interceptors": ["libs/interceptors/src"],
+      "@lib/interceptors/*": ["libs/interceptors/src/*"],
+      "@lib/filters": ["libs/filters/src"],
+      "@lib/filters/*": ["libs/filters/src/*"],
+      "@lib/common": ["libs/common/src"],
+      "@lib/common/*": ["libs/common/src/*"],
+      "@lib/logger": ["libs/logger/src"],
+      "@lib/logger/*": ["libs/logger/src/*"],
+      "@lib/config": ["libs/config/src"],
+      "@lib/config/*": ["libs/config/src/*"],
+      "@lib/scheduler": ["libs/scheduler/src"],
+      "@lib/scheduler/*": ["libs/scheduler/src/*"],
+      "@lib/middlewares": ["libs/middlewares/src"],
+      "@lib/middlewares/*": ["libs/middlewares/src/*"],
+      "@lib/health": ["libs/health/src"],
+      "@lib/health/*": ["libs/health/src/*"],
+      "@lib/audit.logger": ["libs/audit.logger/src"],
+      "@lib/audit.logger/*": ["libs/audit.logger/src/*"],
+      "@lib/errors": ["libs/errors/src"],
+      "@lib/errors/*": ["libs/errors/src/*"],
+      "@lib/service.registry": ["libs/service.registry/src"],
+      "@lib/service.registry/*": ["libs/service.registry/src/*"],
+      "@lib/metrics": ["libs/metrics/src"],
+      "@lib/metrics/*": ["libs/metrics/src/*"],
+      "@lib/dtos": ["libs/dtos/src"],
+      "@lib/dtos/*": ["libs/dtos/src/*"],
+      "@lib/guards": ["libs/guards/src"],
+      "@lib/guards/*": ["libs/guards/src/*"]
     }
   }
 }
