fix: add env for db

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -32,7 +32,7 @@ jobs:
 
       - name: Start Redis and MongoDB Docker containers
         env:
-          DATABASE_URL: ${{ secrets.MAIN_DATABASE_URI }}
+          MAIN_DATABASE_URI: ${{ secrets.MAIN_DATABASE_URI }}
         run: |
           docker-compose --file docker/redis/docker-compose.yaml up -d
           docker-compose --file docker/mongodb/docker-compose.yaml up -d
