--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -37,7 +37,7 @@ jobs:
         uses: supercharge/mongodb-github-action@1.10.0
         with:
           mongodb-version: '6.0'
-          mongodb-replica-set: test-rs
+          mongodb-replica-set: testdb
           mongodb-port: 27018
 
       - name: Run Prisma migrations
