--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -1,13 +1,35 @@
 name: Tests
 
 on:
-  workflow_run:
-    workflows: ['Lint']
-    types:
-      - completed
+  pull_request:
+    branches:
+      - main
 
 jobs:
+  lint:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '18'
+
+      - name: Install pnpm
+        run: npm install -g pnpm
+
+      - name: Install dependencies
+        run: pnpm install
+
+      - name: Lint
+        run: pnpm lint
+
+      - name: Check code formatting
+        run: pnpm format --check
   tests:
+    needs: [lint]
     runs-on: ubuntu-latest
     env:
       MAIN_DATABASE_URI: ${{ secrets.MAIN_DATABASE_URI }}
