--- a/docker/mongodb/docker-compose.yaml
+++ b/docker/mongodb/docker-compose.yaml
@@ -3,7 +3,7 @@ version: '3.8'
 services:
   mongodb:
     container_name: mongodb
-    restart: always
+    restart: unless-stopped
     build:
       context: .
       dockerfile: Dockerfile
