--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@liaoliaots/nestjs-redis-health": "9.0.4",
     "@nestjs/common": "10.2.6",
     "@nestjs/core": "10.2.6",
+    "@nestjs/devtools-integration": "0.1.5",
     "@nestjs/jwt": "10.1.1",
     "@nestjs/microservices": "10.2.6",
     "@nestjs/passport": "10.0.2",
@@ -56,6 +57,7 @@
     "compression": "1.7.4",
     "cron": "2.4.4",
     "envalid": "8.0.0",
+    "find-free-ports": "3.1.1",
     "helmet": "7.0.0",
     "ioredis": "5.3.2",
     "lodash": "4.17.21",
