--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "@nestjs/testing": "10.2.6",
     "@types/express": "4.17.18",
     "@types/jest": "29.5.5",
+    "@types/lodash": "4.14.200",
     "@types/luxon": "3.3.2",
     "@types/node": "20.8.2",
     "@types/supertest": "2.0.14",
