feat: expand redis parameters and add Prisma_Push env

--- a/env/example.env
+++ b/env/example.env
@@ -16,4 +16,7 @@ AUTH_SERVICE_PORT=49153
 REDIS_PASSWORD=''
 REDIS_HOST=localhost
 REDIS_PORT=6379
-REDIS_TLS=''
+REDIS_TLS={}
+REDIS_USERNAME=default
+
+PRISMA_PUSH=false
